[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "async-queue-poc"
version = "0.1.0"
description = "Minimal async queue proof of concept with interactive CLI demo"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
